--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:lukehaas/ws-ts-language-server.git"
+  },
   "keywords": [],
   "author": "Luke Haas",
   "license": "MIT",
